# cmake-emscripten-sdl2-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  index.html
src/: main.cpp
